--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
   "dependencies": {
     "@types/react": "16.4.7",
     "@types/react-dom": "16.0.7",
+    "mobx": "^5.0.3",
+    "mobx-state-tree": "^3.2.0",
     "moment": "2.22.2",
     "react": "16.4.2",
     "react-dom": "16.4.2"
@@ -87,6 +89,7 @@
     "ts-jest": "23.1.3",
     "ts-loader": "4.4.2",
     "tslint": "5.11.0",
+    "tslint-config-prettier": "^1.14.0",
     "tslint-react": "3.6.0",
     "typescript": "2.9.2",
     "typings-for-css-modules-loader": "1.7.0",
