--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "url": "git://github.com/jquintozamora/react-typescript-webpack2-cssModules-postCSS.git"
   },
   "engines": {
-    "npm": "6.1.0",
-    "node": "8.11.3"
+    "npm": "^6.2.0",
+    "node": "^10.9.0"
   },
   "scripts": {
     "start": "node --harmony ./scripts/start.js",
